Added Azure key vault and DB functions

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 requests = "*"
 python-dotenv = "*"
 psycopg2 = "*"
+pyodbc = "*"
+azure-keyvault-secrets = "*"
+azure-identity = "*"
 
 [dev-packages]
 
